<resources>
    <string name="app_name">Covid INA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="case_cov">Covid-19</string>
    <string name="inform_cov">Informasi</string>
    <string name="help_cov">Bantuan</string>
    <string name="item_content">Item content</string>
    <string name="label_consult">Konsultasi Dokter</string>
    <string name="label_hotline">Hotline</string>
    <string name="label_hospital">RS. Khusus Covid-19</string>
    <string name="desc_hotline">Deskripsi hotline  bantuan</string>
    <string name="desc_consult">Deskriptsi konsultasi bantuan</string>
    <string name="desc_mengenal">Deskripsi mengenal</string>
    <string name="desc_mencegah">Deskripsi mencegah</string>
    <string name="desc_mengobati">Deskripsi mengobati</string>
    <string name="desc_mengantisipasi">Deskripsi mengantisipasi</string>
    <string name="help_title">Pusat Bantuan</string>
    <string name="label_mengenal">Mengenal corona</string>
    <string name="label_mencegah">Mencegah penyebaran</string>
    <string name="desc_help">Jika daftar rumah sakit dibawah tidak cukup relevan anda dapat sesuaikan pada halaman utama.</string>
    <string name="desc_hospital">Jika terdapat tanda-tanda anda terinfeksi virus ini silahkan hubungi rumah sakit dibawah.</string>
    <string name="info_title">Apa itu virus corona?</string>
    <string name="news_title">Update berita Covid-19</string>
    <string name="hospital_title">Rumah sakit</string>
    <string name="desc_info">Kenali virus corona sejak dini demi melindungi keluarga tercinta kita.</string>
    <string name="desc_news">Kenali berita seputar Covid-19 yang credible demi melindungi keluarga dari informasi palsu (Hoax).</string>
    <string name="label_news">Berita seputar corona</string>
    <string name="province">Pilih Provinsi</string>
    <string name="positive_case">Kasus Positif</string>
    <string name="recovered">Sembuh</string>
    <string name="treated">Dirawat</string>
    <string name="death">Meninggal</string>
    <string name="male">Pria</string>
    <string name="_0_5">- 5th</string>
    <string name="_6_18">6 ~ 18th</string>
    <string name="_19_30">19 ~ 30th</string>
    <string name="_31_45">31 ~ 45th</string>
    <string name="_46_59">46 ~ 59th</string>
    <string name="_60">+ 60th</string>
    <string name="female">Wanita</string>
    <string name="preview_covid_update">Total Kasus Covid-19</string>
    <string name="view_detail">Lihat Detail</string>
    <string name="cases">Kasus</string>
    <string name="key_covid_model">key_covid_model</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="desc_gender">Berdasarkan jenis kelamin Pemerintah Pusat telah membagi menjadi dua kategori kasus yang tercatat.</string>
    <string name="age_scope">Rentang Usia</string>
    <string name="desc_age_scope">Terdapat enam klasifikasi kasus berdasarkan rentang usia yang dicatat oleh Pemerintah Pusat.</string>
    <string name="covid_update">Update Kasus Covid-19</string>
    <string name="message">message</string>
    <string name="phone">mobile</string>
    <string name="whatsapp">whatsapp</string>
    <string name="address">Alamat</string>
    <string name="mobile_user_agent">Mozilla/5.0 (Linux; Android 9; Redmi 6 Pro Build/PKQ1.180917.001; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/89.0.4389.105 Mobile Safari/537.36</string>
    <string name="desktop_user_agent">Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/37.0.2049.0 Safari/537.36</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="button_more">button more</string>
    <string name="fab_more">fab more</string>
</resources>