<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="caseViewModel"
            type="com.dudegenuine.covidnowdays.ui.fragment.cases.CasesViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/item_medium"
        android:layout_marginVertical="@dimen/item_small">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout android:id="@+id/tx_inp_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:hint="@string/province"
                android:layout_marginBottom="@dimen/item_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView android:id="@+id/ac_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@{caseViewModel.stateCovidItem.key}"
                    bind:provinceAdapter="@{caseViewModel.officialCovidData}"
                    bind:provinceListener="@{caseViewModel.onProvinceSelected}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/covid_update"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{caseViewModel.officialCovidData.previewLastDate}"/>
                <androidx.appcompat.widget.AppCompatTextView android:id="@+id/btnCaseDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:textColor="@color/design_default_color_secondary"
                    android:onClickListener="@{caseViewModel::onCardToDetail}"
                    android:text="@string/view_detail"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
</layout>