<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="hospital"
            type="com.dudegenuine.covidnowdays.model.remote.Hospital" />
        <variable
            name="helpViewModel"
            type="com.dudegenuine.covidnowdays.ui.fragment.help.HelpViewModel" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_small"
        android:orientation="vertical">
        <!--Header-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/_03_hospital"
            android:layout_marginVertical="@dimen/item_medium"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@{hospital.viewName}"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginVertical="8dp"
            bind:marquee="@{true}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>
        <View style="@style/Divider" android:layout_marginVertical="@dimen/item_medium" android:layout_marginHorizontal="@dimen/item_small"/>
        <!--Buttons-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/item_small"
            android:orientation="horizontal"
            android:weightSum="3">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="@{(view) -> helpViewModel.onButtonsClickOnce(view, 0, hospital)}"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="@dimen/spacing_large"
                    android:src="@drawable/ic_baseline_textsms_24"/>
                <TextView
                    android:text="@string/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="@{(view) -> helpViewModel.onButtonsClickOnce(view, 1, hospital)}"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="@dimen/spacing_large"
                    android:src="@drawable/ic_baseline_phone_24"/>
                <TextView
                    android:text="@string/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="@{(view) -> helpViewModel.onButtonsClickOnce(view, 2, hospital)}"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="@dimen/spacing_large"
                    android:src="@drawable/ic_baseline_chat_bubble_24"/>
                <TextView
                    android:text="@string/whatsapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View style="@style/Divider" android:layout_marginVertical="@dimen/item_medium" android:layout_marginHorizontal="@dimen/item_small"/>
        <!--Address-->
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/item_small"
            android:text="@string/address"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/item_small"
            android:text="@{hospital.viewHospitalDetail}"
            android:textColor="@color/design_default_color_secondary_variant"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>